--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,7 +17,8 @@
     "joi": "17.12.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "1.10.0",
-    "pg": "^8.14.1"
+    "pg": "^8.14.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -27,6 +28,7 @@
     "@types/morgan": "1.9.3",
     "@types/node": "^14.18.33",
     "@types/pg": "^8.11.11",
+    "@types/swagger-ui-express": "^4.1.8",
     "node-gyp": "^6.1.0",
     "nodemon": "^3.1.0",
     "ts-node": "10.9.1",
